--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,10 @@
 ---
 layout: layouts/base.njk
 title: Document Archive
+eleventyNavigation:
+  key: IN
+  title: Index
+  order: 1
 ---
 
 <h2>All Documents</h2>
