--- a/src/login.njk
+++ b/src/login.njk
@@ -30,8 +30,8 @@ title: Access Terminal
     <div style="height: 1rem;"></div>
 
     <div class="terminal-row">
-      <button class="btn btn-primary" type="submit">Initiate Session</button>
-      <a class="btn btn-ghost" href="/">Return to Index</a>
+      <button class="btn btn-primary" type="submit">Test</button>
+      <a class="btn btn-ghost" href="/">Test</a>
     </div>
 
     <p id="access-error" class="smallprint" style="display:none;">
@@ -39,7 +39,7 @@ title: Access Terminal
     </p>
   </form>
     <p class="smallprint">
-    If you do not have credentials, contact the designated administrar Oversight admin for temporary access issuance.
+    If you do not have credentials, contact the designated administrar Oversight admin for access issuance.
   </p>
 </div>
 
