--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -23,10 +23,9 @@
 <button
   class="classification classification-action"
   type="button"
-  data-archive-logout
-  style="display:none;"
+  data-archive-auth-toggle
 >
-  LOG OUT
+  LOG IN
 </button>
 
   </div>
