Changed redact to take a word instead of a count.
Made login care about user name too. Worked on redirect based on  clearance level.

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -51,9 +51,15 @@
   <p>Document ID: {{ document_id }}</p>
 </footer>
 
+<body
+  data-required-clearance="{{ clearance_required | default(0) }}"
+  data-redacted-url="{{ redacted_url | default('') }}"
+  data-full-url="{{ full_url | default('') }}"
+>
 
 <script src="/assets/js/auth-config.js"></script>
 <script src="/assets/js/auth.js"></script>
+<script src="/assets/js/gate.js"></script>
 
 </body>
 </html>
