--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
+<body data-theme="{{ theme | default('default') }}">
 
 <header class="site-header">
   <h1 class="site-title">
@@ -52,13 +53,13 @@
 </footer>
 
 <body
+  class="gate-pending"
   data-required-clearance="{{ clearance_required | default(0) }}"
-  data-redacted-url="{{ redacted_url | default('') }}"
-  data-full-url="{{ full_url | default('') }}"
 >
 
 <script src="/assets/js/auth-config.js"></script>
 <script src="/assets/js/auth.js"></script>
+<script src="/assets/js/redact.js"></script>
 <script src="/assets/js/gate.js"></script>
 
 </body>
