Making the access-denied page prettier.
Making buttons better.

--- a/src/access-denied.njk
+++ b/src/access-denied.njk
@@ -4,5 +4,20 @@ title: ACCESS DENIED
 permalink: /access-denied/
 ---
 
-<h2>ACCESS DENIED</h2>
-<p>Insufficient clearance for this document.</p>
+<div class="card">
+  {% sectionHeader "ACCESS DENIED" %}
+  ALL ACCESS ATTEMPTS ARE LOGGED
+  {% endsectionHeader %}
+
+  <h3>Clearance Required</h3>
+  <p>You do not have sufficient clearance to view this document. This attempt has been forwarded to your supervisor.</p>
+  <hr>
+
+  <div class="terminal-row">
+    <a class="btn btn-primary" href="/">Return to Index</a>
+  </div>
+
+  <p class="smallprint">
+    If you believe this is an error, contact Oversight for a clearance review.
+  </p>
+</div>
