Some cute changes to the denied page, plus horus styling.

--- a/src/access-denied.njk
+++ b/src/access-denied.njk
@@ -21,3 +21,10 @@ permalink: /access-denied/
     If you believe this is an error, contact Oversight for a clearance review.
   </p>
 </div>
+
+<div class="card">
+  {% sectionHeader "Memorandium" %} 
+  From Overseer Chen
+  {% endsectionHeader %}
+  <p>Excess requess for clearance review will be subject to the same policy as requests for LL increase. (See Protocol: <span class="horus">Rocks Fall; Everybody Dies</span>)</p>
+</div>
