--- a/src/assets/css/effects.css
+++ b/src/assets/css/effects.css
@@ -5,9 +5,8 @@
 
 .horus:hover {
     background-color: black;
+    color: #fff;
     animation: distort 0.6s infinite;
-    text-transform: uppercase;
-    font-weight: bold;
 }
 
 @keyframes distort {
