--- a/src/login.njk
+++ b/src/login.njk
@@ -99,6 +99,7 @@ title: Access Terminal
 
   if (rec_user !== codename) {
         errEl.style.display = "block";
+        console.log(rec_user)
         return;
       }
 
