--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -90,6 +90,10 @@
     margin: 0 0 var(--space-3);
 }
 
+.card--spaced {
+    margin-top: var(--space-3);
+}
+
 .data-table {
     width: 100%;
     border-collapse: collapse;
