--- a/src/documents/njk-files/index.njk
+++ b/src/documents/njk-files/index.njk
@@ -26,7 +26,7 @@ Be advised: some documents are restricted by clearance level and may contain red
 
 <div class="card card--spaced">
   {% sectionHeader "Recommended Reading" %}
-  A subset of information for priming on the wider lore and local history.
+  A subset of documents for priming on the wider lore and local history.
   {% endsectionHeader %}
   <ul>
     <li><a href="/documents/internal/union/">UNION</a></li>
