Cleaning some stuff up

--- a/src/documents/njk-files/index.njk
+++ b/src/documents/njk-files/index.njk
@@ -30,7 +30,7 @@ Be advised: some documents are restricted by clearance level and may contain red
   {% endsectionHeader %}
   <ul>
     <li><a href="/documents/internal/union/">UNION</a></li>
-    <li><a href="/documents/internal/lancers/">LANCER</a></li>
+    <li><a href="/documents/internal/lancers/">LANCERS</a></li>
     <li><a href="/documents/internal/corpos/">CORPOS</a></li>
     <li><a href="/documents/internal/timeline/">TIMELINE</a></li>
     <li><a href="/documents/external/reihenstadt/">REIHENSTADT</a></li>
