--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,7 +14,7 @@
 >
 
 <header class="site-header">
-  <button class="site-logo" type="button" data-theme-toggle aria-label="Toggle dark mode">
+  <button class="site-logo" type="button" data-theme-toggle>
     <img
       src="/assets/images/oversightlogoheader.svg"
       alt=""
