changes to index

--- a/src/documents/njk-files/index.njk
+++ b/src/documents/njk-files/index.njk
@@ -34,6 +34,8 @@ Be advised: some documents are restricted by clearance level and may contain red
     <li><a href="/documents/internal/corpos/">CORPOS</a></li>
     <li><a href="/documents/internal/timeline/">TIMELINE</a></li>
     <li><a href="/documents/external/reihenstadt/">REIHENSTADT</a></li>
+    <li><a href="/documents/internal/oversight/">OVERSIGHT</a></li>
+    <li><a href="/documents/unsorted/intake/">INTAKE</a></li>
   </ul>
 </div>
 
