testing mobile vsr

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -36,6 +36,16 @@
       REQUIRED CLEARANCE LEVEL {{ clearance_required | default("UNSPECIFIED") }}
     </p>
 
+    <button
+      class="classification classification-action site-menu-toggle"
+      type="button"
+      data-sidebar-toggle
+      aria-controls="site-sidebar"
+      aria-expanded="false"
+    >
+      MENU
+    </button>
+
 <button
   class="classification classification-action"
   type="button"
@@ -49,7 +59,7 @@
 </header>
 
 <div class="shell">
-  <aside class="sidebar">
+  <aside class="sidebar" id="site-sidebar">
     {% include "components/nav.njk" %}
   </aside>
 
@@ -60,6 +70,7 @@
   </main>
 </div>
 
+<div class="sidebar-scrim" data-sidebar-scrim></div>
 
 <footer class="site-footer">
   <p>Document ID: {{ document_id }}</p>
@@ -70,6 +81,7 @@
 <script src="/assets/js/theme.js"></script>
 <script src="/assets/js/redact.js"></script>
 <script src="/assets/js/gate.js"></script>
+<script src="/assets/js/sidebar.js"></script>
 
 </body>
 </html>
